--- a/htmls/branchhtmls/background-position.html
+++ b/htmls/branchhtmls/background-position.html
@@ -191,7 +191,7 @@
 <html lang="zh-cmn-Hans">
 <head>
 <meta charset="utf-8" />
-<title>background-color_CSS参考手册_web前端开发参考手册系列</title>
+<title>background-position_CSS参考手册_web前端开发参考手册系列</title>
 <meta name="author" content="制作者：CarryQiu,联系：187346709@qq.com" />
 <style>
 	.test {
