--- a/htmls/branchhtmls/font-family.html
+++ b/htmls/branchhtmls/font-family.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0, user-scalable=no">
-		<title>background-origin</title>
+		<title>font-family</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
 		<!--<link rel="stylesheet" href="../../lib/font-awesome.css">-->
@@ -14,7 +14,7 @@
 		<div class="container">
 			<nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				<strong class="has-text-info">background-origin</strong>
+				<strong class="has-text-info">font-family</strong>
 				<a class="button is-link m-copy">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -30,19 +30,22 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>background-origin：</strong><span>&lt;box&gt; [ , &lt;box&gt; ]*</span>
+						<strong>font-family：</strong><span>[ &lt;family-name&gt; | &lt;generic-family&gt; ]</span>
 					</li>
 					<li>
-						<strong>&lt;box&gt;</strong><span> = border-box | padding-box | content-box</span>
+						<strong>&lt;family-name&gt;</strong><span> = arial | georgia | verdana | helvetica | simsun and etc。</span>
 					</li>
 					<li>
-						<strong>默认值：</strong><span class="m-border-bg">padding-box</span>
+						<strong>&lt;generic-family&gt;</strong><span> = cursive | fantasy | monospace | serif | sans-serif</span>
+					</li>
+					<li>
+						<strong>默认值：</strong><span class="m-border-bg">由user agent决定</span>
 					</li>
 					<li>
 						<strong>适用于：</strong><span>所有元素</span>
 					</li>
 					<li>
-						<strong>继承性：</strong><span>无</span>
+						<strong>继承性：</strong><span>有</span>
 					</li>
 					<li>
 						<strong>动画性：</strong><span>否</span>
@@ -58,13 +61,10 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>padding-box:</strong><span>从padding区域（含padding）开始显示背景图像。</span>
+						<strong>&lt;family-name&gt;</strong><span>字体名称。按优先顺序排列。以逗号隔开。如果字体名称包含空格或中文，则应使用引号括起。</span>
 					</li>
 					<li>
-						<strong>border-box:</strong><span>从border区域（含border）开始显示背景图像。</span>
-					</li>
-					<li>
-						<strong>content-box:</strong><span>从content区域开始显示背景图像。</span>
+						<strong>&lt;generic-family&gt;</strong><span>字体序列名称。</span>
 					</li>
 				</ul>
 			</div>
@@ -74,9 +74,25 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>设置或检索对象的背景图像计算 &lt;' background-position '&gt; 时的参考原点(位置)。</strong>
+						<strong>设置或检索用于对象中文本的字体名称序列。</strong>
 					</li>
-					<li>对应的脚本特性为backgroundOrigin。</li>
+					<li>序列可包含嵌入字体。请参阅@font-face规则。</li>
+					<li>一般字体引用可以不加引号，如果字体名包含了空格、数字或者符号（如连接符）则需加上引号，避免引发错误。</li>
+					<li>user agent会遍历定义的字体序列，直到匹配到某个字体为止。</li>
+					<li>
+						<strong>指定字体序列：</strong>
+					</li>
+					<li>
+						<a></a>
+						<a class="panel-block m-background-blue">
+							<strong>写法：</strong>
+						</a>
+							<pre class="m-border-blue">body { font-family: helvetica, verdana, sans-serif; }</pre>
+						<a class="panel-block m-background-blue has-text-danger">
+							<span>如上字体定义，假设你机器上没有helvetica字体，但有verdana，这时将会以verdana显示你的文字。</span>
+						</a>
+					</li>
+					<li>对应的脚本特性为fontFamily。</li>
 				</ul>
 			</div>
 			<a class="panel-block m-background">
@@ -106,24 +122,16 @@
 						    </tr>
 						  </thead>
 						  <tbody>
-						     <tr>
-						     	<th rowspan="3">Basic Support</th>
-						     	<td class="m-red">6.0-8.0</td>
-						     	<td class="m-red">2.0-3.5</td>
-						     	<td rowspan="3" class="m-green">4.0+</td>
-						     	<td rowspan="3" class="m-green">6.0+</td>
-						     	<td rowspan="3" class="m-green">15.0+</td>
-						     	<td rowspan="3" class="m-green">6.0+</td>
-						     	<td class="m-green">2.1-2.3<sup>-webkit-</sup></td>
-						     	<td rowspan="3" class="m-green">18.0+</td>
-						     </tr>
-						     <tr>
-						     	<td rowspan="2" class="m-green">9.0+</td>
-						     	<td class="m-green">3.6<sup>-moz-</sup></td>
-						     	<td rowspan="2" class="m-green">3.0+</td>
-						     </tr>
-						     <tr>
+						      <tr>
+						     	<th>Basic Support</th>
+						     	<td class="m-green">6.0+</td>
+						     	<td class="m-green">2.0+</td>
 						     	<td class="m-green">4.0+</td>
+						     	<td class="m-green">3.1+</td>
+						     	<td class="m-green">3.5+</td>
+						     	<td class="m-green">3.2+</td>
+						     	<td class="m-green">2.1+</td>
+						     	<td class="m-green">18.0+</td>
 						     </tr>
 						  </tbody>
 						</table>
@@ -139,33 +147,16 @@
 <html lang="zh-cmn-Hans">
 <head>
 <meta charset="utf-8" />
-<title>background-origin_CSS参考手册_web前端开发参考手册系列</title>
+<title>font-family_CSS参考手册_web前端开发参考手册系列</title>
 <meta name="author" content="制作者：CarryQiu,联系：187346709@qq.com" />
 <style>
-	h1{font-size:20px;}
-	h2{font-size:16px;}
-	p{border:10px dashed #666;width:200px;height:200px;padding:20px;background:#aaa url(skin/p_103x196_1.jpg) no-repeat;}
-	.border-box p{background-origin:border-box;}
-	.padding-box p{background-origin:padding-box;}
-	.content-box p{background-origin:content-box;}
+	.test {
+		font-family: arial, georgia, verdana, simsun, helvetica, sans-serif;
+	}
 </style>
 </head>
 <body>
-	<h1>background-origin</h1>
-	<ul class="test">
-		<li class="border-box">
-			<h2>border-box</h2>
-			<p>从border区域（含border）开始显示背景图像</p>
-		</li>
-		<li class="padding-box">
-			<h2>padding-box</h2>
-			<p>从padding区域（含padding）开始显示背景图像</p>
-		</li>
-		<li class="content-box">
-			<h2>content-box</h2>
-			<p>从content区域开始显示背景图像</p>
-		</li>
-	</ul>
+	<div class="test">使用字体名称和字体序列名称定义字体。</div>
 </body>
 </html>
 				</textarea>
