--- a/htmls/branchhtmls/font-size.html
+++ b/htmls/branchhtmls/font-size.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0, user-scalable=no">
-		<title>background-origin</title>
+		<title>font-size</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
 		<!--<link rel="stylesheet" href="../../lib/font-awesome.css">-->
@@ -14,7 +14,7 @@
 		<div class="container">
 			<nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				<strong class="has-text-info">background-origin</strong>
+				<strong class="has-text-info">font-size</strong>
 				<a class="button is-link m-copy">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -30,22 +30,25 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>background-origin：</strong><span>&lt;box&gt; [ , &lt;box&gt; ]*</span>
+						<strong>font-size：</strong><span> &lt;absolute-size&gt; | &lt;relative-size&gt; | &lt;length&gt; | &lt;percentage&gt;</span>
 					</li>
 					<li>
-						<strong>&lt;box&gt;</strong><span> = border-box | padding-box | content-box</span>
+						<strong>&lt;absolute-size&gt;</strong><span>xx-small | x-small | small | medium | large | x-large | xx-large</span>
 					</li>
 					<li>
-						<strong>默认值：</strong><span class="m-border-bg">padding-box</span>
+						<strong>&lt;relative-size&gt;</strong><span>smaller | larger</span>
+					</li>
+					<li>
+						<strong>默认值：</strong><span class="m-border-bg">medium</span>
 					</li>
 					<li>
 						<strong>适用于：</strong><span>所有元素</span>
 					</li>
 					<li>
-						<strong>继承性：</strong><span>无</span>
+						<strong>继承性：</strong><span>有</span>
 					</li>
 					<li>
-						<strong>动画性：</strong><span>否</span>
+						<strong>动画性：</strong><span>是</span>
 					</li>
 					<li>
 						<strong>计算值：</strong><span>指定值</span>
@@ -58,13 +61,16 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>padding-box:</strong><span>从padding区域（含padding）开始显示背景图像。</span>
+						<strong>&lt;absolute-size&gt;</strong><span>根据对象字号进行调节。以 medium 作为基础参照，xx-small相当于medium 3/5 (h6)，x-small: 3/4，small: 8/9 (h5)，medium: 1 (h4)，large: 6/5 (h3)，x-large: 3/2 (h2)，xx-large: 2/1 (h1)。</span>
 					</li>
 					<li>
-						<strong>border-box:</strong><span>从border区域（含border）开始显示背景图像。</span>
+						<strong>&lt;relative-size&gt;</strong><span>相对于父对像中字号进行相对调节。使用成比例的em单位计算。</span>
 					</li>
 					<li>
-						<strong>content-box:</strong><span>从content区域开始显示背景图像。</span>
+						<strong>&lt;length&gt;</strong><span>用长度值指定文字大小。不允许负值。</span>
+					</li>
+					<li>
+						<strong>&lt;percentage&gt;</strong><span>用百分比指定文字大小。其百分比取值是基于父对象中字体的尺寸。不允许负值。</span>
 					</li>
 				</ul>
 			</div>
@@ -74,9 +80,9 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>设置或检索对象的背景图像计算 &lt;' background-position '&gt; 时的参考原点(位置)。</strong>
+						<strong>设置或检索对象中的字体尺寸。</strong>
 					</li>
-					<li>对应的脚本特性为backgroundOrigin。</li>
+					<li>对应的脚本特性为fontSize。</li>
 				</ul>
 			</div>
 			<a class="panel-block m-background">
@@ -106,24 +112,16 @@
 						    </tr>
 						  </thead>
 						  <tbody>
-						     <tr>
-						     	<th rowspan="3">Basic Support</th>
-						     	<td class="m-red">6.0-8.0</td>
-						     	<td class="m-red">2.0-3.5</td>
-						     	<td rowspan="3" class="m-green">4.0+</td>
-						     	<td rowspan="3" class="m-green">6.0+</td>
-						     	<td rowspan="3" class="m-green">15.0+</td>
-						     	<td rowspan="3" class="m-green">6.0+</td>
-						     	<td class="m-green">2.1-2.3<sup>-webkit-</sup></td>
-						     	<td rowspan="3" class="m-green">18.0+</td>
-						     </tr>
-						     <tr>
-						     	<td rowspan="2" class="m-green">9.0+</td>
-						     	<td class="m-green">3.6<sup>-moz-</sup></td>
-						     	<td rowspan="2" class="m-green">3.0+</td>
-						     </tr>
-						     <tr>
+						      <tr>
+						     	<th>Basic Support</th>
+						     	<td class="m-green">6.0+</td>
+						     	<td class="m-green">2.0+</td>
 						     	<td class="m-green">4.0+</td>
+						     	<td class="m-green">3.1+</td>
+						     	<td class="m-green">3.5+</td>
+						     	<td class="m-green">3.2+</td>
+						     	<td class="m-green">2.1+</td>
+						     	<td class="m-green">18.0+</td>
 						     </tr>
 						  </tbody>
 						</table>
@@ -139,31 +137,69 @@
 <html lang="zh-cmn-Hans">
 <head>
 <meta charset="utf-8" />
-<title>background-origin_CSS参考手册_web前端开发参考手册系列</title>
+<title>font-size_CSS参考手册_web前端开发参考手册系列</title>
 <meta name="author" content="制作者：CarryQiu,联系：187346709@qq.com" />
 <style>
-	h1{font-size:20px;}
-	h2{font-size:16px;}
-	p{border:10px dashed #666;width:200px;height:200px;padding:20px;background:#aaa url(skin/p_103x196_1.jpg) no-repeat;}
-	.border-box p{background-origin:border-box;}
-	.padding-box p{background-origin:padding-box;}
-	.content-box p{background-origin:content-box;}
+	.test p{margin:15px 0;border:1px solid #000;}
+	.xx-small p{font-size:xx-small;}
+	.x-small p{font-size:x-small;}
+	.small p{font-size:small;}
+	.medium p{font-size:medium;}
+	.large p{font-size:large;}
+	.x-large p{font-size:x-large;}
+	.xx-large p{font-size:xx-large;}
+	.smaller p{font-size:smaller;}
+	.larger p{font-size:larger;}
+	.float p{font-size:20px;}
+	.percentage{font-size:20px;}
+	.percentage span{font-size:60%;}
 </style>
 </head>
 <body>
-	<h1>background-origin</h1>
 	<ul class="test">
-		<li class="border-box">
-			<h2>border-box</h2>
-			<p>从border区域（含border）开始显示背景图像</p>
+		<li class="xx-small">
+			<strong>尺寸大小为xx-small：</strong>
+			<p>xx-small尺寸的文字。</p>
 		</li>
-		<li class="padding-box">
-			<h2>padding-box</h2>
-			<p>从padding区域（含padding）开始显示背景图像</p>
+		<li class="x-small">
+			<strong>尺寸大小为x-small：</strong>
+			<p>x-small尺寸的文字。</p>
 		</li>
-		<li class="content-box">
-			<h2>content-box</h2>
-			<p>从content区域开始显示背景图像</p>
+		<li class="small">
+			<strong>尺寸大小为small：</strong>
+			<p>small尺寸的文字。</p>
+		</li>
+		<li class="medium">
+			<strong>尺寸大小为medium：</strong>
+			<p>medium尺寸的文字。</p>
+		</li>
+		<li class="large">
+			<strong>尺寸大小为large：</strong>
+			<p>large尺寸的文字。</p>
+		</li>
+		<li class="x-large">
+			<strong>尺寸大小为x-large：</strong>
+			<p>x-large尺寸的文字。</p>
+		</li>
+		<li class="xx-large">
+			<strong>尺寸大小为xx-large：</strong>
+			<p>xx-large尺寸的文字。</p>
+		</li>
+		<li class="samller">
+			<strong>尺寸大小为samller：</strong>
+			<p>samller尺寸的文字。</p>
+		</li>
+		<li class="larger">
+			<strong>尺寸大小为larger：</strong>
+			<p>larger尺寸的文字。</p>
+		</li>
+		<li class="float">
+			<strong>尺寸大小为20px：</strong>
+			<p>20px尺寸的文字。</p>
+		</li>
+		<li class="percentage">
+			<strong>尺寸大小为20px：</strong>
+			<p>父对象20px尺寸的文字。<span>我的尺寸只是父对象的60%</span></p>
 		</li>
 	</ul>
 </body>
