--- a/htmls/branchhtmls/opacity.html
+++ b/htmls/branchhtmls/opacity.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0, user-scalable=no">
-		<title>background-origin</title>
+		<title>opacity</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
 		<!--<link rel="stylesheet" href="../../lib/font-awesome.css">-->
@@ -14,7 +14,7 @@
 		<div class="container">
 			<nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				<strong class="has-text-info">background-origin</strong>
+				<strong class="has-text-info">opacity</strong>
 				<a class="button is-link m-copy">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -30,13 +30,10 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>background-origin：</strong><span>&lt;box&gt; [ , &lt;box&gt; ]*</span>
+						<strong>opacity：</strong><span>&lt;number&gt;</span>
 					</li>
 					<li>
-						<strong>&lt;box&gt;</strong><span> = border-box | padding-box | content-box</span>
-					</li>
-					<li>
-						<strong>默认值：</strong><span class="m-border-bg">padding-box</span>
+						<strong>默认值：</strong><span class="m-border-bg">1</span>
 					</li>
 					<li>
 						<strong>适用于：</strong><span>所有元素</span>
@@ -45,7 +42,7 @@
 						<strong>继承性：</strong><span>无</span>
 					</li>
 					<li>
-						<strong>动画性：</strong><span>否</span>
+						<strong>动画性：</strong><span>是</span>
 					</li>
 					<li>
 						<strong>计算值：</strong><span>指定值</span>
@@ -58,13 +55,7 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>padding-box:</strong><span>从padding区域（含padding）开始显示背景图像。</span>
-					</li>
-					<li>
-						<strong>border-box:</strong><span>从border区域（含border）开始显示背景图像。</span>
-					</li>
-					<li>
-						<strong>content-box:</strong><span>从content区域开始显示背景图像。</span>
+						<strong>&lt;number&gt;</strong><span>使用浮点数指定对象的不透明度。值被约束在[0.0-1.0]范围内，如果超过了这个范围，其计算结果将截取到与之最相近的值。</span>
 					</li>
 				</ul>
 			</div>
@@ -74,9 +65,24 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>设置或检索对象的背景图像计算 &lt;' background-position '&gt; 时的参考原点(位置)。</strong>
+						<strong>检索或设置对象的不透明度。</strong>
 					</li>
-					<li>对应的脚本特性为backgroundOrigin。</li>
+					<li>
+						<strong>对于尚不支持opacity属性的IE浏览器可以使用IE私有的滤镜属性来实现与opacity相同的效果。</strong>
+					</li>
+					<li>
+						<a></a>
+						<a class="panel-block m-background-blue">
+							<strong>示例代码：</strong>
+						</a>
+							<pre class="m-border-blue">div{filter:alpha(opacity=50);} /* for IE8 and earlier */
+div{opacity:.5;} /* for IE9 and other browsers */</pre>
+						<a class="panel-block m-background-blue has-text-danger">
+							<span>以上2段代码的效果相同。</span>
+						</a>
+					</li>
+					<li>元素定义了值小于1的opacity，将会产生局部层叠上下文。</li>
+					<li>对应的脚本特性为opacity。</li>
 				</ul>
 			</div>
 			<a class="panel-block m-background">
@@ -106,24 +112,19 @@
 						    </tr>
 						  </thead>
 						  <tbody>
-						     <tr>
-						     	<th rowspan="3">Basic Support</th>
+						      <tr>
+						     	<th rowspan="2">Basic Support</th>
 						     	<td class="m-red">6.0-8.0</td>
-						     	<td class="m-red">2.0-3.5</td>
-						     	<td rowspan="3" class="m-green">4.0+</td>
-						     	<td rowspan="3" class="m-green">6.0+</td>
-						     	<td rowspan="3" class="m-green">15.0+</td>
-						     	<td rowspan="3" class="m-green">6.0+</td>
-						     	<td class="m-green">2.1-2.3<sup>-webkit-</sup></td>
-						     	<td rowspan="3" class="m-green">18.0+</td>
+						     	<td rowspan="2" class="m-green">2.0+</td>
+						     	<td rowspan="2" class="m-green">4.0+</td>
+						     	<td rowspan="2" class="m-green">3.1+</td>
+						     	<td rowspan="2" class="m-green">15.0+</td>
+						     	<td rowspan="2" class="m-green">3.2+</td>
+						     	<td rowspan="2" class="m-green">2.1+</td>
+						     	<td rowspan="2" class="m-green">18.0+</td>
 						     </tr>
 						     <tr>
-						     	<td rowspan="2" class="m-green">9.0+</td>
-						     	<td class="m-green">3.6<sup>-moz-</sup></td>
-						     	<td rowspan="2" class="m-green">3.0+</td>
-						     </tr>
-						     <tr>
-						     	<td class="m-green">4.0+</td>
+						     	<td class="m-green">9.0+</td>
 						     </tr>
 						  </tbody>
 						</table>
@@ -139,33 +140,35 @@
 <html lang="zh-cmn-Hans">
 <head>
 <meta charset="utf-8" />
-<title>background-origin_CSS参考手册_web前端开发参考手册系列</title>
+<title>opacity_CSS参考手册_web前端开发参考手册系列</title>
 <meta name="author" content="制作者：CarryQiu,联系：187346709@qq.com" />
 <style>
-	h1{font-size:20px;}
-	h2{font-size:16px;}
-	p{border:10px dashed #666;width:200px;height:200px;padding:20px;background:#aaa url(skin/p_103x196_1.jpg) no-repeat;}
-	.border-box p{background-origin:border-box;}
-	.padding-box p{background-origin:padding-box;}
-	.content-box p{background-origin:content-box;}
+	h1 {
+		margin: 10px 0;
+		font-size: 16px;
+	}
+	.test,
+	.test2 {
+		width: 300px;
+		height: 150px;
+		padding: 10px;
+	}
+	.test {
+		background:#050;
+	}
+	.test2 {
+		margin: -120px 0 0 50px;
+		background: #000;
+		filter: alpha(opacity=50);
+		opacity: .5;
+		color: #fff;
+	}
 </style>
 </head>
 <body>
-	<h1>background-origin</h1>
-	<ul class="test">
-		<li class="border-box">
-			<h2>border-box</h2>
-			<p>从border区域（含border）开始显示背景图像</p>
-		</li>
-		<li class="padding-box">
-			<h2>padding-box</h2>
-			<p>从padding区域（含padding）开始显示背景图像</p>
-		</li>
-		<li class="content-box">
-			<h2>content-box</h2>
-			<p>从content区域开始显示背景图像</p>
-		</li>
-	</ul>
+	<h1>下例是一个半透明的效果：</h1>
+	<div class="test">不透明度为100%的box</div>
+	<div class="test2">不透明度为50%的box</div>
 </body>
 </html>
 				</textarea>
