--- a/htmls/branchhtmls/overflow-wrap.html
+++ b/htmls/branchhtmls/overflow-wrap.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0, user-scalable=no">
-		<title>background-origin</title>
+		<title>overflow-wrap</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
 		<!--<link rel="stylesheet" href="../../lib/font-awesome.css">-->
@@ -14,7 +14,7 @@
 		<div class="container">
 			<nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				<strong class="has-text-info">background-origin</strong>
+				<strong class="has-text-info">overflow-wrap</strong>
 				<a class="button is-link m-copy">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -30,25 +30,25 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>background-origin：</strong><span>&lt;box&gt; [ , &lt;box&gt; ]*</span>
+						<strong>overflow-wrap：</strong><span>normal | break-word</span>
 					</li>
 					<li>
-						<strong>&lt;box&gt;</strong><span> = border-box | padding-box | content-box</span>
-					</li>
-					<li>
-						<strong>默认值：</strong><span class="m-border-bg">padding-box</span>
+						<strong>默认值：</strong><span class="m-border-bg">normal</span>
 					</li>
 					<li>
 						<strong>适用于：</strong><span>所有元素</span>
 					</li>
 					<li>
-						<strong>继承性：</strong><span>无</span>
+						<strong>继承性：</strong><span>有</span>
 					</li>
 					<li>
 						<strong>动画性：</strong><span>否</span>
 					</li>
 					<li>
 						<strong>计算值：</strong><span>指定值</span>
+					</li>
+					<li>
+						<strong>相关属性：</strong><span>&lt;'word-wrap'&gt; || &lt;'word-break'&gt;</span>
 					</li>
 				</ul>
 			</div>
@@ -58,13 +58,10 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>padding-box:</strong><span>从padding区域（含padding）开始显示背景图像。</span>
+						<strong>normal:</strong><span>允许内容顶开或溢出指定的容器边界。</span>
 					</li>
 					<li>
-						<strong>border-box:</strong><span>从border区域（含border）开始显示背景图像。</span>
-					</li>
-					<li>
-						<strong>content-box:</strong><span>从content区域开始显示背景图像。</span>
+						<strong>break-word:</strong><span>内容将在边界内换行。如果需要，单词内部允许断行。</span>
 					</li>
 				</ul>
 			</div>
@@ -74,9 +71,11 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>设置或检索对象的背景图像计算 &lt;' background-position '&gt; 时的参考原点(位置)。</strong>
+						<strong>设置或检索当内容超过指定容器的边界时是否断行。</strong>
 					</li>
-					<li>对应的脚本特性为backgroundOrigin。</li>
+					<li class="has-text-danger">CSS3中将&lt;' word-wrap '&gt; 改名为 &lt;' overflow-wrap '&gt;；</li>
+					<li>由于历史原因，当你使用&lt;' overflow-wrap '&gt; 时，最好同时使用 &lt;' word-wrap '&gt; 作为备选，作向前兼容。</li>
+					<li>对应的脚本特性为overflowWrap</li>
 				</ul>
 			</div>
 			<a class="panel-block m-background">
@@ -106,24 +105,23 @@
 						    </tr>
 						  </thead>
 						  <tbody>
-						     <tr>
-						     	<th rowspan="3">Basic Support</th>
-						     	<td class="m-red">6.0-8.0</td>
-						     	<td class="m-red">2.0-3.5</td>
-						     	<td rowspan="3" class="m-green">4.0+</td>
-						     	<td rowspan="3" class="m-green">6.0+</td>
-						     	<td rowspan="3" class="m-green">15.0+</td>
-						     	<td rowspan="3" class="m-green">6.0+</td>
-						     	<td class="m-green">2.1-2.3<sup>-webkit-</sup></td>
-						     	<td rowspan="3" class="m-green">18.0+</td>
+						      <tr>
+						     	<th rowspan="2">Basic Support</th>
+						     	<td rowspan="2" class="m-red">6.0-11.0</td>
+						     	<td rowspan="2" class="m-red">2.0-40.0</td>
+						     	<td class="m-red">4.0-22.0</td>
+						     	<td class="m-red">6.0</td>
+						     	<td rowspan="2" class="m-green">15.0+</td>
+						     	<td class="m-red">6.0-6.1</td>
+						     	<td class="m-red">2.1-4.3</td>
+						     	<td class="m-red">18.0-21.0</td>
 						     </tr>
 						     <tr>
-						     	<td rowspan="2" class="m-green">9.0+</td>
-						     	<td class="m-green">3.6<sup>-moz-</sup></td>
-						     	<td rowspan="2" class="m-green">3.0+</td>
-						     </tr>
-						     <tr>
-						     	<td class="m-green">4.0+</td>
+						     	<td class="m-green">23.0+</td>
+						     	<td class="m-green">6.1+</td>
+						     	<td class="m-green">7.0+</td>
+						     	<td class="m-green">4.4.0+</td>
+						     	<td class="m-green">22.0+</td>
 						     </tr>
 						  </tbody>
 						</table>
@@ -139,31 +137,27 @@
 <html lang="zh-cmn-Hans">
 <head>
 <meta charset="utf-8" />
-<title>background-origin_CSS参考手册_web前端开发参考手册系列</title>
+<title>overflow-wrap_CSS参考手册_web前端开发参考手册系列</title>
 <meta name="author" content="制作者：CarryQiu,联系：187346709@qq.com" />
 <style>
-	h1{font-size:20px;}
-	h2{font-size:16px;}
-	p{border:10px dashed #666;width:200px;height:200px;padding:20px;background:#aaa url(skin/p_103x196_1.jpg) no-repeat;}
-	.border-box p{background-origin:border-box;}
-	.padding-box p{background-origin:padding-box;}
-	.content-box p{background-origin:content-box;}
+	.test p{width:100px;border:1px solid #000;background-color:#eee;}
+	.normal p{word-wrap:normal;overflow-wrap:normal;}
+	.break-word p{word-wrap:break-word;overflow-wrap:break-word;}
 </style>
 </head>
 <body>
-	<h1>background-origin</h1>
 	<ul class="test">
-		<li class="border-box">
-			<h2>border-box</h2>
-			<p>从border区域（含border）开始显示背景图像</p>
+		<li class="normal">
+			<strong>normal：</strong>
+			<p>aaabbbcccdddeeefffggghhhiiijjjkkklllmmmnnn</p>
 		</li>
-		<li class="padding-box">
-			<h2>padding-box</h2>
-			<p>从padding区域（含padding）开始显示背景图像</p>
+		<li class="break-word">
+			<strong>break-word：</strong>
+			<p>aaabbbcccdddeeefffggghhhiiijjjkkklllmmmnnn</p>
 		</li>
-		<li class="content-box">
-			<h2>content-box</h2>
-			<p>从content区域开始显示背景图像</p>
+		<li class="break-word">
+			<strong>break-word：</strong>
+			<p>中英混排的时候abcdefghijklmnopqrst</p>
 		</li>
 	</ul>
 </body>
