--- a/htmls/quicksearch.html
+++ b/htmls/quicksearch.html
@@ -134,33 +134,33 @@
 				 <span>颜色 Color</span>  
 			</a>
 			<p class="panel-block m-css3-color">
-			    <a>color</a>
-			    <a>opacity</a>
+			    <a href="branchhtmls/color.html">color</a>
+			    <a href="branchhtmls/opacity.html">opacity</a>
 			</p>
 			<a class="panel-block m-background">
 				 <span>字体 Font</span>  
 			</a>
 			<p class="panel-block m-css3-font">
-			    <a>font</a>
-			    <a>font-style</a>
-			    <a>font-variant</a>
-			    <a>font-weight</a>
-			    <a>font-size</a>
-			    <a>font-family</a>
-			    <a>bfont-stretch</a>
-			    <a>font-size-adjust</a>
+			    <a href="branchhtmls/font.html">font</a>
+			    <a href="branchhtmls/font-style.html">font-style</a>
+			    <a href="branchhtmls/font-variant.html">font-variant</a>
+			    <a href="branchhtmls/font-weight.html">font-weight</a>
+			    <a href="branchhtmls/font-size.html">font-size</a>
+			    <a href="branchhtmls/font-family.html">font-family</a>
+			    <a href="branchhtmls/font-stretch.html">font-stretch</a>
+			    <a href="branchhtmls/font-size-adjust.html">font-size-adjust</a>
 			</p>
 			<a class="panel-block m-background">
 				 <span>文本 Text</span>  
 			</a>
 			<p class="panel-block m-css3-text">
-			    <a>text-transform</a>
-			    <a>white-space</a>
-			    <a>tab-size</a>
-			    <a>word-break</a>
-			    <a>word-wrap</a>
-			     <a>overflow-wrap</a>
-			    <a>text-align</a>
+			    <a href="branchhtmls/text-transform.html">text-transform</a>
+			    <a href="branchhtmls/white-space.html">white-space</a>
+			    <a href="branchhtmls/tab-size.html">tab-size</a>
+			    <a href="branchhtmls/word-break.html">word-break</a>
+			    <a href="branchhtmls/word-wrap.html">word-wrap</a>
+			     <a href="branchhtmls/overflow-wrap.html">overflow-wrap</a>
+			    <a href="branchhtmls/text-align.html">text-align</a>
 			    <a>text-align-last</a>
 			    <a>text-justify</a>
 			    <a>word-spacing</a>
