--- a/htmls/branchhtmls/background-size.html
+++ b/htmls/branchhtmls/background-size.html
@@ -152,7 +152,7 @@
 <html lang="zh-cmn-Hans">
 <head>
 <meta charset="utf-8" />
-<title>background-color_CSS参考手册_web前端开发参考手册系列</title>
+<title>background-size_CSS参考手册_web前端开发参考手册系列</title>
 <meta name="author" content="制作者：CarryQiu,联系：187346709@qq.com" />
 <style>
 	h1{font-size:20px;}
