--- a/htmls/branchhtmls/text-transform.html
+++ b/htmls/branchhtmls/text-transform.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0, user-scalable=no">
-		<title>background-origin</title>
+		<title>text-transform</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
 		<!--<link rel="stylesheet" href="../../lib/font-awesome.css">-->
@@ -14,7 +14,7 @@
 		<div class="container">
 			<nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				<strong class="has-text-info">background-origin</strong>
+				<strong class="has-text-info">text-transform</strong>
 				<a class="button is-link m-copy">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -30,19 +30,16 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>background-origin：</strong><span>&lt;box&gt; [ , &lt;box&gt; ]*</span>
+						<strong>text-transform：</strong><span>none | capitalize | uppercase | lowercase | full-width<sup class="m-css3-super">css3</sup></span>
 					</li>
 					<li>
-						<strong>&lt;box&gt;</strong><span> = border-box | padding-box | content-box</span>
-					</li>
-					<li>
-						<strong>默认值：</strong><span class="m-border-bg">padding-box</span>
+						<strong>默认值：</strong><span class="m-border-bg">none</span>
 					</li>
 					<li>
 						<strong>适用于：</strong><span>所有元素</span>
 					</li>
 					<li>
-						<strong>继承性：</strong><span>无</span>
+						<strong>继承性：</strong><span>有</span>
 					</li>
 					<li>
 						<strong>动画性：</strong><span>否</span>
@@ -58,13 +55,19 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>padding-box:</strong><span>从padding区域（含padding）开始显示背景图像。</span>
+						<strong>none:</strong><span>无转换。</span>
 					</li>
 					<li>
-						<strong>border-box:</strong><span>从border区域（含border）开始显示背景图像。</span>
+						<strong>capitalize：</strong><span>将每个单词的第一个字母转换成大写。</span>
 					</li>
 					<li>
-						<strong>content-box:</strong><span>从content区域开始显示背景图像。</span>
+						<strong>uppercase:</strong><span>将每个单词转换成大写。</span>
+					</li>
+					<li>
+						<strong>lowercase：</strong><span>将每个单词转换成小写。</span>
+					</li>
+					<li>
+						<strong>full-width：</strong><span>将所有字符转换成fullwidth形式。如果字符没有相应的fullwidth形式，将保留原样。这个值通常用于排版拉丁字符和数字等表意符号。（CSS3）。</span>
 					</li>
 				</ul>
 			</div>
@@ -74,9 +77,9 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>设置或检索对象的背景图像计算 &lt;' background-position '&gt; 时的参考原点(位置)。</strong>
+						<strong>检索或设置对象中的文本的大小写。</strong>
 					</li>
-					<li>对应的脚本特性为backgroundOrigin。</li>
+					<li>对应的脚本特性为textTransform。</li>
 				</ul>
 			</div>
 			<a class="panel-block m-background">
@@ -106,24 +109,30 @@
 						    </tr>
 						  </thead>
 						  <tbody>
-						     <tr>
-						     	<th rowspan="3">Basic Support</th>
-						     	<td class="m-red">6.0-8.0</td>
-						     	<td class="m-red">2.0-3.5</td>
-						     	<td rowspan="3" class="m-green">4.0+</td>
-						     	<td rowspan="3" class="m-green">6.0+</td>
-						     	<td rowspan="3" class="m-green">15.0+</td>
-						     	<td rowspan="3" class="m-green">6.0+</td>
-						     	<td class="m-green">2.1-2.3<sup>-webkit-</sup></td>
-						     	<td rowspan="3" class="m-green">18.0+</td>
-						     </tr>
-						     <tr>
-						     	<td rowspan="2" class="m-green">9.0+</td>
-						     	<td class="m-green">3.6<sup>-moz-</sup></td>
-						     	<td rowspan="2" class="m-green">3.0+</td>
-						     </tr>
-						     <tr>
+						      <tr>
+						     	<th>Basic Support</th>
+						     	<td class="m-green">6.0+</td>
+						     	<td class="m-green">2.0+</td>
 						     	<td class="m-green">4.0+</td>
+						     	<td class="m-green">6.0+</td>
+						     	<td class="m-green">15.0+</td>
+						     	<td class="m-green">6.0+</td>
+						     	<td class="m-green">2.1+</td>
+						     	<td class="m-green">18.0+</td>
+						     </tr>
+						     <tr>
+						     	<th rowspan="2">full-width</th>
+						     	<td rowspan="2" class="m-red">6.0-11.0</td>
+						     	<td class="m-red">2.0-18.0</td>
+						     	<td rowspan="2" class="m-red">4.0-45.0</td>
+						     	<td rowspan="2" class="m-red">6.0-8.0</td>
+						     	<td rowspan="2" class="m-red">15.0-29.0</td>
+						     	<td rowspan="2" class="m-red">6.0-8.3</td>
+						     	<td rowspan="2" class="m-red">2.1-4.4.4</td>
+						     	<td rowspan="2" class="m-red">18.0-42.0</td>
+						     </tr>
+						     <tr>
+						     	<td class="m-green">19.0+</td>
 						     </tr>
 						  </tbody>
 						</table>
@@ -139,31 +148,30 @@
 <html lang="zh-cmn-Hans">
 <head>
 <meta charset="utf-8" />
-<title>background-origin_CSS参考手册_web前端开发参考手册系列</title>
+<title>text-transfrom_CSS参考手册_web前端开发参考手册系列</title>
 <meta name="author" content="制作者：CarryQiu,联系：187346709@qq.com" />
 <style>
-	h1{font-size:20px;}
-	h2{font-size:16px;}
-	p{border:10px dashed #666;width:200px;height:200px;padding:20px;background:#aaa url(skin/p_103x196_1.jpg) no-repeat;}
-	.border-box p{background-origin:border-box;}
-	.padding-box p{background-origin:padding-box;}
-	.content-box p{background-origin:content-box;}
+	.capitalize span{text-transform:capitalize;}
+	.uppercase span{text-transform:uppercase;}
+	.lowercase span{text-transform:lowercase;}
 </style>
 </head>
 <body>
-	<h1>background-origin</h1>
 	<ul class="test">
-		<li class="border-box">
-			<h2>border-box</h2>
-			<p>从border区域（含border）开始显示背景图像</p>
+		<li>
+			<strong>将每个单词的首字母转换成大写</strong>
+			<div>原　文： <span>how do you do.</span></div>
+			<div class="capitalize">转换后： <span>how do you do.</span></div>
 		</li>
-		<li class="padding-box">
-			<h2>padding-box</h2>
-			<p>从padding区域（含padding）开始显示背景图像</p>
+		<li>
+			<strong>转换成大写</strong>
+			<div>原　文： <span>how do you do.</span></div>
+			<div class="uppercase">转换后： <span>how do you do.</span></div>
 		</li>
-		<li class="content-box">
-			<h2>content-box</h2>
-			<p>从content区域开始显示背景图像</p>
+		<li>
+			<strong>转换成小写</strong>
+			<div>原　文： <span>HOW ARE YOU.</span></div>
+			<div class="lowercase">转换后： <span>HOW ARE YOU.</span></div>
 		</li>
 	</ul>
 </body>
