--- a/htmls/branchhtmls/word-break.html
+++ b/htmls/branchhtmls/word-break.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0, user-scalable=no">
-		<title>background-origin</title>
+		<title>word-break</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
 		<!--<link rel="stylesheet" href="../../lib/font-awesome.css">-->
@@ -14,7 +14,7 @@
 		<div class="container">
 			<nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				<strong class="has-text-info">background-origin</strong>
+				<strong class="has-text-info">word-break</strong>
 				<a class="button is-link m-copy">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -30,25 +30,25 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>background-origin：</strong><span>&lt;box&gt; [ , &lt;box&gt; ]*</span>
+						<strong>word-break：</strong><span>normal | keep-all | break-all</span>
 					</li>
 					<li>
-						<strong>&lt;box&gt;</strong><span> = border-box | padding-box | content-box</span>
-					</li>
-					<li>
-						<strong>默认值：</strong><span class="m-border-bg">padding-box</span>
+						<strong>默认值：</strong><span class="m-border-bg">normal</span>
 					</li>
 					<li>
 						<strong>适用于：</strong><span>所有元素</span>
 					</li>
 					<li>
-						<strong>继承性：</strong><span>无</span>
+						<strong>继承性：</strong><span>有</span>
 					</li>
 					<li>
 						<strong>动画性：</strong><span>否</span>
 					</li>
 					<li>
 						<strong>计算值：</strong><span>指定值</span>
+					</li>
+					<li>
+						<strong>相关属性：</strong><span>&lt;'word-wrap'&gt;</span>
 					</li>
 				</ul>
 			</div>
@@ -58,13 +58,13 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>padding-box:</strong><span>从padding区域（含padding）开始显示背景图像。</span>
+						<strong>normal:</strong><span>依照亚洲语言和非亚洲语言的文本规则，允许在字内换行。</span>
 					</li>
 					<li>
-						<strong>border-box:</strong><span>从border区域（含border）开始显示背景图像。</span>
+						<strong>keep-all:</strong><span>与所有非亚洲语言的normal相同。对于中文，韩文，日文，不允许字断开。适合包含少量亚洲文本的非亚洲文本。</span>
 					</li>
 					<li>
-						<strong>content-box:</strong><span>从content区域开始显示背景图像。</span>
+						<strong>break-all:</strong><span>该行为与亚洲语言的normal相同。也允许非亚洲语言文本行的任意字内断开。该值适合包含一些非亚洲文本的亚洲文本，比如使连续的英文字母间断行。</span>
 					</li>
 				</ul>
 			</div>
@@ -74,9 +74,11 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>设置或检索对象的背景图像计算 &lt;' background-position '&gt; 时的参考原点(位置)。</strong>
+						<strong>设置或检索对象内文本的字内换行行为。</strong>
 					</li>
-					<li>对应的脚本特性为backgroundOrigin。</li>
+					<li>对于解决防止页面中出现连续无意义的长字符打破布局，应该使用break-all属性值；</li>
+					<li class="has-text-danger">作为IE的私有属性之一，IE5.5率先实现了 &lt;' word-break '&gt; ，后期被w3c采纳成标准属性；</li>
+					<li>对应的脚本特性为wordBreak</li>
 				</ul>
 			</div>
 			<a class="panel-block m-background">
@@ -106,28 +108,38 @@
 						    </tr>
 						  </thead>
 						  <tbody>
-						     <tr>
-						     	<th rowspan="3">Basic Support</th>
-						     	<td class="m-red">6.0-8.0</td>
-						     	<td class="m-red">2.0-3.5</td>
-						     	<td rowspan="3" class="m-green">4.0+</td>
-						     	<td rowspan="3" class="m-green">6.0+</td>
-						     	<td rowspan="3" class="m-green">15.0+</td>
-						     	<td rowspan="3" class="m-green">6.0+</td>
-						     	<td class="m-green">2.1-2.3<sup>-webkit-</sup></td>
-						     	<td rowspan="3" class="m-green">18.0+</td>
+						      <tr>
+						     	<th rowspan="2">Basic Support</th>
+						     	<td rowspan="2" class="m-green">6.0+</td>
+						     	<td class="m-red">2.0-14.0</td>
+						     	<td rowspan="2" class="m-green">4.0+</td>
+						     	<td rowspan="2" class="m-green">6.0+</td>
+						     	<td rowspan="2" class="m-green">15.0+</td>
+						     	<td rowspan="2" class="m-green">6.0+</td>
+						     	<td rowspan="2" class="m-green">2.1+</td>
+						     	<td rowspan="2" class="m-green">18.0+</td>
 						     </tr>
 						     <tr>
-						     	<td rowspan="2" class="m-green">9.0+</td>
-						     	<td class="m-green">3.6<sup>-moz-</sup></td>
-						     	<td rowspan="2" class="m-green">3.0+</td>
+						     	<td class="m-green">15.0+</td>
+						     </tr>
+						      <tr>
+						     	<th rowspan="2">keep-all</th>
+						     	<td rowspan="2" class="m-green">6.0+</td>
+						     	<td class="m-red">2.0-14.0</td>
+						     	<td rowspan="2" class="m-red">4.0-45.0</td>
+						     	<td rowspan="2" class="m-red">6.0-8.0</td>
+						     	<td rowspan="2" class="m-red">15.0-29.0</td>
+						     	<td rowspan="2" class="m-red">6.0-8.3</td>
+						     	<td rowspan="2" class="m-red">2.1-4.4.4</td>
+						     	<td rowspan="2" class="m-red">18.0-42.0</td>
 						     </tr>
 						     <tr>
-						     	<td class="m-green">4.0+</td>
+						     	<td class="m-green">15.0+</td>
 						     </tr>
 						  </tbody>
 						</table>
 					</li>
+					<li>不支持：keep-all 作为参数值。</li>
 				</ul>
 			</div>
 			<a class="panel-block m-background">
@@ -139,31 +151,28 @@
 <html lang="zh-cmn-Hans">
 <head>
 <meta charset="utf-8" />
-<title>background-origin_CSS参考手册_web前端开发参考手册系列</title>
+<title>word-break_CSS参考手册_web前端开发参考手册系列</title>
 <meta name="author" content="制作者：CarryQiu,联系：187346709@qq.com" />
 <style>
-	h1{font-size:20px;}
-	h2{font-size:16px;}
-	p{border:10px dashed #666;width:200px;height:200px;padding:20px;background:#aaa url(skin/p_103x196_1.jpg) no-repeat;}
-	.border-box p{background-origin:border-box;}
-	.padding-box p{background-origin:padding-box;}
-	.content-box p{background-origin:content-box;}
+	.test p{width:100px;border:1px solid #000;background-color:#eee;}
+	.normal p{word-break:normal;}
+	.break-all p{word-break:break-all;}
+	.keep-all p{word-break:keep-all;}
 </style>
 </head>
 <body>
-	<h1>background-origin</h1>
 	<ul class="test">
-		<li class="border-box">
-			<h2>border-box</h2>
-			<p>从border区域（含border）开始显示背景图像</p>
+		<li class="normal">
+			<strong>normal：</strong>
+			<p>aaabbbcccdddeeefffggghhhiiijjjkkklllmmmnnn</p>
 		</li>
-		<li class="padding-box">
-			<h2>padding-box</h2>
-			<p>从padding区域（含padding）开始显示背景图像</p>
+		<li class="break-all">
+			<strong>break-word：</strong>
+			<p>aaabbbcccdddeeefffggghhhiiijjjkkklllmmmnnn</p>
 		</li>
-		<li class="content-box">
-			<h2>content-box</h2>
-			<p>从content区域开始显示背景图像</p>
+		<li class="keep-all">
+			<strong>keep-all：</strong>
+			<p>aaabbbcccdddeeefffggghhhiiijjjkkklllmmmnnn</p>
 		</li>
 	</ul>
 </body>
